--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 
 # Ignore bundler config.
 /.bundle
-
+config/local_env.yml
 # Ignore all environment files (except templates).
 /.env*
 !/.env*.erb
